exports[`compileTailwindClasses > snapshots compound variants and pseudo elements 1`] = `
[
  "[data-ui] {",
  "  &::before {",
  "    content: var(--tw-content);",
  "    display: block;",
  "  }",
  "  @media (width >= 40rem) {",
  "    &:hover {",
  "      @media (hover: hover) {",
  "        color: var(--color-red-500);",
  "      }",
  "    }",
  "  }",
  "}"
]
`;

exports[`compileTailwindClasses > snapshots custom selector 1`] = `
[
  ".compiled {",
  "  font-size: var(--text-sm);",
  "  line-height: var(--tw-leading, var(--text-sm--line-height));",
  "  --tw-font-weight: var(--font-weight-medium);",
  "  font-weight: var(--font-weight-medium);",
  "}"
]
`;

exports[`compileTailwindClasses > snapshots merged utilities 1`] = `
[
  ".output {",
  "  padding: calc(var(--spacing) * 4);",
  "  background-color: var(--color-blue-500);",
  "}"
]
`;

exports[`compileTailwindClasses > snapshots regular and hover utilities 1`] = `
[
  ".output {",
  "  padding: calc(var(--spacing) * 4);",
  "  &:hover {",
  "    @media (hover: hover) {",
  "      background-color: var(--color-blue-600);",
  "    }",
  "  }",
  "}"
]
`;

exports[`compileTailwindClasses > snapshots single utility 1`] = `
[
  ".output {",
  "  padding: calc(var(--spacing) * 4);",
  "}"
]
`;
